[package]
name = "libp2p-broadcast"
version = "0.9.1"
authors = ["David Craven <david@craven.ch>", "Actyx AG"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "broadcast messages to connected peers"
repository = "https://github.com/ipfs-rust/libp2p-broadcast"

[dependencies]
clap = { version = "4.3.19", features = ["derive", "env", "cargo"] }
fnv = "1.0.7"
futures = "0.3.21"
libp2p = { version = "0.43.0", default-features = false }
log = "0.4.27"

[[bin]]
name = "libp2p-broadcast"
path = "src/bin/libp2p-broadcast.rs"
